[metadata]
name = ColorfulFestival_wlh
version = 0.0.2
author = liuhui0401
author_email = dhwlh123@163.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/liuhui0401/testpypi
project_urls =
    Bug Tracker = https://github.com/liuhui0401/testpypi/tree/main/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src